cod-tools (unreleased)

  * Fixed:
    - COD::SUsage:
        - a typo in the output of the options() subroutine. 

cod-tools (3.2.0)

  * Added:
    - the 'cif_automorphism' script.
    - cif_cod_check:
      - validation of SHELX checksums.
      - the '--no-max-year-temperature-factors-optional' option.
      - the '--check-adp-presence', '--max-year-adp-presence-is-optional'
        and '--no-max-year-adp-presence-is-optional' options as replacements
        of the deprecated '--check-temperature-factors',
        '--max-year-temperature-factors-optional' and
        '--no-max-year-adp-presence-is-optional' options respectively.
    - cif_fillcell:
      - the '--output-cod-molecule-data-items' option.
    - cif_hkl_check:
      - validation of SHELX checksums.
    - cif_sort_atoms:
      - the '--record-original-order', '--order-child-loops' options;
      - support for ordering according to values of '_atom_type_*' CIF
        loop.
    - cif_CODify:
      - an error message regarding the mandatory input CIF file.
    - COD::AtomProperties assembler:
      - covalent radii from Meng and Lewis (1991).
    - COD::CIF::Data:
      - the calculate_shelx_checksum() subroutine.
    - COD::CIF::Data::CODFlags:
      - the has_attached_hydrogens() subroutine.
    - COD::CIF::Data::Check:
      - the check_shelx_checksums() subroutine;
      - the check_adp_presence() subroutine.
      - a note message informing that the mandatory presence of atom
        displacement parameters will not be checked due to missing
        publication year;
      - a warning message informing that the mandatory presence of
        atom displacement parameters will not be checked due to an
        improper publication year value.
    - COD::CIF::DDL::DDLm:
      - the get_all_data_names() subroutine;
      - a warning message about the treatment of save frames
        without the _definition.id data item in the build_ddlm_dic
        subroutine.
    - COD::ToolsVersion: