@@ -1,8 +1,15 @@
+cod-tools (^/branches/feature/antanas-fix-printing-of-semicolon-prefixed-strings)
+
+  * Fixed:
+    - COD::CIF::Tags::Print:
+        - the handling of single line values that start with a semicolon (';')
+          in the print_single_tag_and_value() subroutine.
+
 cod-tools (unreleased)
 
   * Fixed:
     - COD::SUsage:
-        - a typo in the output of the options() subroutine. 
+        - a typo in the output of the options() subroutine.
 
 cod-tools (3.2.0)
 
